--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
@@ -56,11 +56,11 @@ The following provides examples of the configuration file to enable mTLS between
           key_path: certs/server.key
           enable_graph_ssl: "true"
           # The following parameters are required for creating a cluster with Zones.
-          accept_partial_success: "true"
-          prioritize_intra_zone_reading: "true"
-          sync_meta_when_use_space: "true"
-          stick_to_intra_zone_on_failure: "false" 
-          session_reclaim_interval_secs: "300"
+          # accept_partial_success: "true"
+          # prioritize_intra_zone_reading: "true"
+          # sync_meta_when_use_space: "true"
+          # stick_to_intra_zone_on_failure: "false" 
+          # session_reclaim_interval_secs: "300"
         initContainers:
           - name: init-auth-sidecar
             command:
@@ -105,7 +105,7 @@ The following provides examples of the configuration file to enable mTLS between
       metad:
         # Zone names CANNOT be modified once set.
         # It's suggested to set an odd number of Zones.
-        zone_list: az1,az2,az3 
+        # zone_list: az1,az2,az3 
         validate_session_timestamp: "false"
         licenseManagerURL: "192.168.8.xxx:9119"
         resources:
@@ -158,9 +158,10 @@ The following provides examples of the configuration file to enable mTLS between
       imagePullSecrets:
         - name: nebula-image
       enablePVReclaim: true
-      topologySpreadConstraints:
-      - topologyKey: "kubernetes.io/zone"
-        whenUnsatisfiable: "DoNotSchedule"
+      # Used to evenly distribute Pods across Zones.
+      # topologySpreadConstraints:
+      # - topologyKey: "kubernetes.io/zone"
+      #   whenUnsatisfiable: "DoNotSchedule"
     ```
 
 ??? info "View sample configurations of mTLS between services"
@@ -178,8 +179,10 @@ The following provides examples of the configuration file to enable mTLS between
       # The certificate files for NebulaGraph Operator to access Storage and Meta services.
       sslCerts:
         clientSecret: "client-cert"
+        clientCert: "tls.crt"
+        clientKey: "tls.key"
         caSecret: "ca-cert" 
-        caCert: "root.crt"
+        caCert: "tls.crt"
       graphd:
         config:
           # The following parameters are used to enable mTLS between services.
@@ -190,11 +193,11 @@ The following provides examples of the configuration file to enable mTLS between
           enable_meta_ssl: "true"
           enable_storage_ssl: "true" 
           # The following parameters are required for creating a cluster with Zones.
-          accept_partial_success: "true"
-          prioritize_intra_zone_reading: "true"
-          sync_meta_when_use_space: "true"
-          stick_to_intra_zone_on_failure: "false" 
-          session_reclaim_interval_secs: "300"
+          # accept_partial_success: "true"
+          # prioritize_intra_zone_reading: "true"
+          # sync_meta_when_use_space: "true"
+          # stick_to_intra_zone_on_failure: "false" 
+          # session_reclaim_interval_secs: "300"
         initContainers:
           - name: init-auth-sidecar
             command:
@@ -240,7 +243,7 @@ The following provides examples of the configuration file to enable mTLS between
         config:
           # Zone names CANNOT be modified once set.
           # It's suggested to set an odd number of Zones.
-          zone_list: az1,az2,az3 
+          # zone_list: az1,az2,az3 
           validate_session_timestamp: "false"
           # The following parameters are used to enable mTLS between services.
           ca_client_path: certs/root.crt
@@ -352,7 +355,7 @@ The following provides examples of the configuration file to enable mTLS between
               storage: 1Gi
           storageClassName: local-path
         # Automatically balance storage data after scaling out. 
-        enableAutoBalance: true
+        # enableAutoBalance: true
       reference:
         name: statefulsets.apps
         version: v1
@@ -361,11 +364,11 @@ The following provides examples of the configuration file to enable mTLS between
       imagePullSecrets:
         - name: nebula-image
       # Whether to automatically delete PVCs when deleting a cluster.
-      enablePVReclaim: true
+      # enablePVReclaim: true
       # Used to evenly distribute Pods across Zones.
-      topologySpreadConstraints:
-      - topologyKey: "kubernetes.io/zone"
-        whenUnsatisfiable: "DoNotSchedule"
+      # topologySpreadConstraints:
+      # - topologyKey: "kubernetes.io/zone"
+      #   whenUnsatisfiable: "DoNotSchedule"
     ```
 
 ### Configure `spec.<meta|graph|storage>.config`
@@ -385,33 +388,33 @@ spec:
 
 To enable mTLS between services (Graph, Meta, and Storage), add the following fields under the `spec.metad.config`, `spec.graphd.config`, and `spec.storaged.config` respectively in the cluster configuration file.
 
-  ```yaml
-  spec:
-    graph:
-      config:
-        ca_client_path: certs/root.crt
-        ca_path: certs/root.crt
-        cert_path: certs/server.crt
-        key_path: certs/server.key
-        enable_meta_ssl: "true"
-        enable_storage_ssl: "true"
-    metad:
-      config:
-        ca_client_path: certs/root.crt
-        ca_path: certs/root.crt
-        cert_path: certs/server.crt
-        key_path: certs/server.key
-        enable_meta_ssl: "true"
-        enable_storage_ssl: "true"
-    storaged:
-      config:
-        ca_client_path: certs/root.crt
-        ca_path: certs/root.crt
-        cert_path: certs/server.crt
-        key_path: certs/server.key
-        enable_meta_ssl: "true"
-        enable_storage_ssl: "true"
-  ```
+```yaml
+spec:
+  graph:
+    config:
+      ca_client_path: certs/root.crt
+      ca_path: certs/root.crt
+      cert_path: certs/server.crt
+      key_path: certs/server.key
+      enable_meta_ssl: "true"
+      enable_storage_ssl: "true"
+  metad:
+    config:
+      ca_client_path: certs/root.crt
+      ca_path: certs/root.crt
+      cert_path: certs/server.crt
+      key_path: certs/server.key
+      enable_meta_ssl: "true"
+      enable_storage_ssl: "true"
+  storaged:
+    config:
+      ca_client_path: certs/root.crt
+      ca_path: certs/root.crt
+      cert_path: certs/server.crt
+      key_path: certs/server.key
+      enable_meta_ssl: "true"
+      enable_storage_ssl: "true"
+```
 
 ### Configure `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts`
 
@@ -420,71 +423,73 @@ To enable mTLS between services (Graph, Meta, and Storage), add the following fi
 - For the encryption scenario where only the Graph service needs to be encrypted, configure these fields under `spec.graph.config`. 
 - For the encryption scenario where the Graph service, Meta service, and Storage service need to be encrypted, configure these fields under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config` respectively.
 
-#### `initContainers`
+Details about these fields are as follows:
 
-The `initContainers` field is utilized to configure an init-container responsible for generating certificate files. Note that the `volumeMounts` field specifies how a volume specified by `volumes`, shared with the NebulaGraph container, is mounted, providing read and write access. 
+- **initContainers**
 
-In the following example, `init-auth-sidecar` performs the task of copying files from the `certs` directory within the image to `/credentials`. After this task is completed, the init-container exits. 
+  The `initContainers` field is utilized to configure an init-container responsible for generating certificate files. Note that the `volumeMounts` field specifies how a volume specified by `volumes`, shared with the NebulaGraph container, is mounted, providing read and write access. 
 
-Example:
+  In the following example, `init-auth-sidecar` performs the task of copying files from the `certs` directory within the image to `/credentials`. After this task is completed, the init-container exits. 
 
-```yaml
-initContainers:
-- name: init-auth-sidecar
-    command:
-      - /bin/sh
-      - -c
-    args:
-      - cp /certs/* /credentials/
+  Example:
+
+  ```yaml
+  initContainers:
+  - name: init-auth-sidecar
+      command:
+        - /bin/sh
+        - -c
+      args:
+        - cp /certs/* /credentials/
+      imagePullPolicy: Always
+      image: reg.vesoft-inc.com/xxx/xxx:latest
+      volumeMounts:
+        - name: credentials
+          mountPath: /credentials
+  ```
+
+- **sidecarContainers**
+
+  The `sidecarContainers` field is dedicated to periodically monitoring the expiration time of certificates and, when they are near expiration, generating new certificates to replace the existing ones. This process ensures seamless online certificate hot-reloading without any service interruptions.
+
+  In the example provided, the `auth-sidecar` container employs the `crond` process, which runs a crontab script every minute. This script checks the certificate's expiration status using the `openssl x509 -noout -enddate` command. The `volumeMounts` field specifies how a volume is mounted, and this volume is shared with the NebulaGraph container.
+
+  Example:
+
+  ```yaml
+  sidecarContainers:
+  - name: auth-sidecar
     imagePullPolicy: Always
     image: reg.vesoft-inc.com/xxx/xxx:latest
     volumeMounts:
       - name: credentials
         mountPath: /credentials
-```
+  ```
 
-#### `sidecarContainers`
+- **volumes**
 
-The `sidecarContainers` field is dedicated to periodically monitoring the expiration time of certificates and, when they are near expiration, generating new certificates to replace the existing ones. This process ensures seamless online certificate hot-reloading without any service interruptions. The `volumeMounts` field specifies how a volume is mounted, and this volume is shared with the NebulaGraph container.
+  The `volumes` field defines the storage volumes that need to be attached to the NebulaGraph pod. In the following example, the `credentials` volume is of type `emptyDir`, which is a temporary storage volume. Multiple containers can mount the `emptyDir` volume, and they all have read and write access to the same files within the volume.
 
-In the example provided, the `auth-sidecar` container employs the `crond` process, which runs a crontab script every minute. This script checks the certificate's expiration status using the `openssl x509 -noout -enddate` command. 
+  Example:
 
-Example:
+  ```yaml
+  volumes:
+  - name: credentials
+    emptyDir:
+      medium: Memory
+  ```
 
-```yaml
-sidecarContainers:
-- name: auth-sidecar
-  imagePullPolicy: Always
-  image: reg.vesoft-inc.com/xxx/xxx:latest
+- **volumeMounts**
+
+  The `volumeMounts` field specifies the location within the container where the storage volume is mounted. In the example below, the `credentials` storage volume is mounted at the path `/usr/local/nebula/certs` within the NebulaGraph container.
+
+  Example:
+
+  ```yaml
   volumeMounts:
-    - name: credentials
-      mountPath: /credentials
-```
-
-#### `volumes`
-
-The `volumes` field defines the storage volumes that need to be attached to the NebulaGraph pod. In the following example, the `credentials` volume is of type `emptyDir`, which is a temporary storage volume. Multiple containers can mount the `emptyDir` volume, and they all have read and write access to the same files within the volume.
-
-Example:
-
-```yaml
-volumes:
-- name: credentials
-  emptyDir:
-    medium: Memory
-```
-
-#### `volumeMounts`
-
-The `volumeMounts` field specifies the location within the container where the storage volume is mounted. In the example below, the `credentials` storage volume is mounted at the path `/usr/local/nebula/certs` within the NebulaGraph container.
-
-Example:
-
-```yaml
-volumeMounts:
-- name: credentials
-  mountPath: /usr/local/nebula/certs
-```
+  - name: credentials
+    mountPath: /usr/local/nebula/certs
+  ```
 
 ### Configure `sslCerts`
 
@@ -495,17 +500,22 @@ The `spec.sslCerts` field specifies the encrypted certificates for NebulaGraph O
 ```yaml
 spec:
   sslCerts:
-    clientSecret: "client-cert"
-    caSecret: "ca-cert" # The Secret name of the CA certificate.
-    caCert: "root.crt"
+    clientSecret: "client-cert" 
+    clientCert: "tls.crt"  # The key name of the certificate in the client certificate Secret, default is "tls.crt".
+    clientKey: "tls.key"   # The key name of the private key in the client certificate Secret, default is "tls.key".
+    caSecret: "ca-cert" # The name of the CA certificate Secret.
+    caCert: "tls.crt"  # The key name of the certificate in the CA certificate Secret, default is "tls.crt".
 ```
 
-The `insecureSkipVerify` field is used to determine whether the client will verify the server's certificate chain and hostname. In production environments, it is recommended to set this to `false` to ensure the security of communication. If set to `true`, the client will not verify the server's certificate chain and hostname.
+!!! caution
+    Ensure that the keys for the certificates and private keys in the created Secret match the values of the `clientCert`, `clientKey`, and `caCert` fields in `spec.sslCerts`. If you've created a Secret of the TLS type, the default key names are `tls.crt` and `tls.key` for the certificate and private key. In this case, you'll need to manually configure `caCert` field with `ca.crt`.
+
+The `insecureSkipVerify` field is used to determine whether the client will verify the server's certificate chain and hostname. The default value is `false`. In production environments, it is recommended to set this to `false` to ensure the security of communication. If set to `true`, the client will not verify the server's certificate chain and hostname.
 
 ```yaml
 spec:
   sslCerts:
-    insecureSkipVerify: false
+    insecureSkipVerify: true
 ```
 
 !!! caution
